[gd_scene load_steps=30 format=3 uid="uid://bvph445nrhqyv"]

[ext_resource type="Script" uid="uid://d07642wsmqa26" path="res://scenes/intro/office_intro/chair.gd" id="1_djqid"]
[ext_resource type="FontFile" uid="uid://bil147v5vf7xu" path="res://fonts/montserrat/montserrat_regular.ttf" id="2_57x4s"]
[ext_resource type="PackedScene" uid="uid://bs72ogkvdd7d6" path="res://addons/proto_controller/proto_controller.tscn" id="3_360kh"]
[ext_resource type="Script" uid="uid://otvfkxraf2ce" path="res://scenes/intro/office_intro/mesh_instance_3d.gd" id="3_dchin"]
[ext_resource type="Texture2D" uid="uid://bj7eqnqypygfu" path="res://materials/room/WoodFloor051_4K-JPG_Color.jpg" id="4_1g7a3"]
[ext_resource type="Script" uid="uid://dk4p07ieamwgy" path="res://scenes/intro/office_intro/canvas_layer.gd" id="4_57x4s"]
[ext_resource type="Texture2D" uid="uid://bl0yjjsibvieu" path="res://materials/room/Concrete034_4K-JPG_Color.jpg" id="5_1g7a3"]
[ext_resource type="FontFile" uid="uid://ducalfqy7hghw" path="res://fonts/montserrat/montserrat_medium.ttf" id="5_360kh"]
[ext_resource type="PackedScene" uid="uid://ct4jfx3tyof64" path="res://models/objects/bed/bed.glb" id="7_d8tv4"]
[ext_resource type="PackedScene" uid="uid://c3sg73525nnjp" path="res://models/objects/office_desk.glb" id="10_mn0k7"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_7dm0k"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_ig7tw"]
sky_material = SubResource("ProceduralSkyMaterial_7dm0k")

[sub_resource type="Environment" id="Environment_0xm2m"]
background_mode = 2
sky = SubResource("Sky_ig7tw")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1bvp3"]
diffuse_mode = 3
specular_mode = 2
albedo_color = Color(0.771908, 0.608682, 0.482121, 1)
roughness = 0.0
rim_enabled = true

[sub_resource type="CylinderShape3D" id="CylinderShape3D_aw6c5"]
height = 1.46
radius = 2.2

[sub_resource type="ViewportTexture" id="ViewportTexture_dchin"]
viewport_path = NodePath("Office CSG/Chair/Area3D/SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_d8tv4"]
resource_local_to_scene = true
transparency = 1
albedo_texture = SubResource("ViewportTexture_dchin")

[sub_resource type="QuadMesh" id="QuadMesh_7xhtl"]

[sub_resource type="Gradient" id="Gradient_360kh"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_dchin"]
gradient = SubResource("Gradient_360kh")
fill_to = Vector2(0.324786, 0.508547)

[sub_resource type="Gradient" id="Gradient_dchin"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_d8tv4"]
gradient = SubResource("Gradient_dchin")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1g7a3"]
albedo_color = Color(0.439613, 0.435112, 0.463918, 1)
albedo_texture = ExtResource("4_1g7a3")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_h2yge"]
albedo_texture = ExtResource("5_1g7a3")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lquwl"]
albedo_color = Color(0.489778, 0.357869, 0.255387, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7mycd"]
albedo_texture = ExtResource("5_1g7a3")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_272bh"]
albedo_color = Color(0.788235, 0.788235, 0.576471, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5vw27"]
albedo_color = Color(0.178997, 0.258367, 0.26137, 1)

[sub_resource type="BoxMesh" id="BoxMesh_1g7a3"]

[node name="Main" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0xm2m")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.984808, 0.150384, -0.0868239, 2.78059e-08, 0.5, 0.866026, 0.173648, 0.852869, -0.492404, 0, 6.6, 0)
shadow_enabled = true

[node name="Office CSG" type="Node" parent="."]

[node name="Chair" type="Node" parent="Office CSG"]
script = ExtResource("1_djqid")

[node name="Chair" type="CSGCombiner3D" parent="Office CSG/Chair"]
transform = Transform3D(-8.18277e-08, 0, -1.872, 0, 1.6848, 0, 1.872, 0, -8.18277e-08, 2.8, 0.5, -2)
material_override = SubResource("StandardMaterial3D_1bvp3")
use_collision = true

[node name="Seat" type="CSGBox3D" parent="Office CSG/Chair/Chair"]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 0.907692, 0.576923)
size = Vector3(1, 0.2, 1)

[node name="Legs" type="CSGCombiner3D" parent="Office CSG/Chair/Chair"]

[node name="Leg" type="CSGBox3D" parent="Office CSG/Chair/Chair/Legs"]
transform = Transform3D(0.6, 0, 0, 0, 1, 0, 0, 0, 0.6, -0.165385, 0.684615, 0.427923)
size = Vector3(0.1, 0.4, 0.1)

[node name="Leg2" type="CSGBox3D" parent="Office CSG/Chair/Chair/Legs"]
transform = Transform3D(0.6, 0, 0, 0, 1, 0, 0, 0, 0.6, -0.165385, 0.684615, 0.704846)
size = Vector3(0.1, 0.4, 0.1)

[node name="Leg3" type="CSGBox3D" parent="Office CSG/Chair/Chair/Legs"]
transform = Transform3D(0.6, 0, 0, 0, 1, 0, 0, 0, 0.6, 0.15, 0.684615, 0.704846)
size = Vector3(0.1, 0.4, 0.1)

[node name="Leg4" type="CSGBox3D" parent="Office CSG/Chair/Chair/Legs"]
transform = Transform3D(0.6, 0, 0, 0, 1, 0, 0, 0, 0.6, 0.15, 0.684615, 0.427923)
size = Vector3(0.1, 0.4, 0.1)

[node name="Bars" type="CSGCombiner3D" parent="Office CSG/Chair/Chair"]

[node name="Bar" type="CSGBox3D" parent="Office CSG/Chair/Chair/Bars"]
transform = Transform3D(0.5, 0, 0, 0, 1, 0, 0, 0, 0.4, 0.119231, 1.14615, 0.720231)
size = Vector3(0.1, 0.4, 0.1)

[node name="Bar2" type="CSGBox3D" parent="Office CSG/Chair/Chair/Bars"]
transform = Transform3D(0.5, 0, 0, 0, 1, 0, 0, 0, 0.4, -0.15, 1.14615, 0.720231)
size = Vector3(0.1, 0.4, 0.1)

[node name="Back" type="CSGBox3D" parent="Office CSG/Chair/Chair"]
transform = Transform3D(1, 0, 0, 0, 0.6, 0, 0, 0, 0.7, -0.00769219, 1.35385, 0.719231)
size = Vector3(0.4, 0.4, 0.1)

[node name="Area3D" type="Area3D" parent="Office CSG/Chair"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Office CSG/Chair/Area3D"]
transform = Transform3D(1, 0, 0, 0, 0.5, 0, 0, 0, 1, 1.75605, 1.23651, -1.62784)
shape = SubResource("CylinderShape3D_aw6c5")

[node name="sit_label" type="Label3D" parent="Office CSG/Chair/Area3D"]
transform = Transform3D(0.756, 0, 0, 0, 1, 0, 0, 0, 1, 1.35605, 3.48144, -1.97157)
outline_modulate = Color(0, 0, 0, 0)
text = "hold E to sit"
font = ExtResource("2_57x4s")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Office CSG/Chair/Area3D/sit_label"]
transform = Transform3D(0.661376, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.0741403, 0.51856, 0.07157)
material_override = SubResource("StandardMaterial3D_d8tv4")
mesh = SubResource("QuadMesh_7xhtl")
skeleton = NodePath("../..")
script = ExtResource("3_dchin")

[node name="SubViewport" type="SubViewport" parent="Office CSG/Chair/Area3D"]
transparent_bg = true

[node name="Control" type="Control" parent="Office CSG/Chair/Area3D/SubViewport"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureProgressBar" type="TextureProgressBar" parent="Office CSG/Chair/Area3D/SubViewport/Control"]
layout_mode = 0
offset_right = 512.0
offset_bottom = 512.0
scale = Vector2(8, 8)
fill_mode = 4
texture_under = SubResource("GradientTexture2D_dchin")
texture_progress = SubResource("GradientTexture2D_d8tv4")
tint_over = Color(2.98411e-06, 0.701504, 0.703864, 1)

[node name="Floor" type="CSGBox3D" parent="Office CSG"]
transform = Transform3D(1.4014, 0, 0, 0, 1.4014, 0, 0, 0, 1.4014, -0.272003, 0.9474, -0.32)
material_override = SubResource("StandardMaterial3D_1g7a3")
use_collision = true
size = Vector3(7.2, 0.5, 7.2)

[node name="Walls" type="CSGCombiner3D" parent="Office CSG"]
transform = Transform3D(1.274, 0, 0, 0, 1.7836, 0, 0, 0, 1.274, 0, 0, -0.1)
material_override = SubResource("StandardMaterial3D_h2yge")
use_collision = true

[node name="Wall4" type="CSGBox3D" parent="Office CSG/Walls"]
transform = Transform3D(1.31134e-07, 0, -1, 0, 0.48, 0, 1, 0, 1.31134e-07, 3.3, 2.21539, -0.199999)
size = Vector3(7.2, 7.2, 0.2)

[node name="Wall3" type="CSGBox3D" parent="Office CSG/Walls"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 0.48, 0, -1, 0, -4.37114e-08, -3.7, 2.21539, -0.199999)
size = Vector3(7.2, 7.2, 0.2)

[node name="Wall2" type="CSGBox3D" parent="Office CSG/Walls"]
transform = Transform3D(1, 0, 0, 0, 0.48, 0, 0, 0, 1, -0.2, 2.21539, -3.7)
size = Vector3(7.2, 7.2, 0.2)

[node name="Wall" type="CSGBox3D" parent="Office CSG/Walls"]
transform = Transform3D(1, 0, 0, 0, 0.48, 0, 0, 0, 1, -0.2, 2.21539, 3.3)
size = Vector3(7.2, 7.2, 0.2)

[node name="Table" type="CSGCombiner3D" parent="Office CSG"]
transform = Transform3D(-4.47035e-08, 0, -1, 0, 1, 0, 1, 0, -4.47035e-08, 2.5, 0, -2.1)
visible = false
material_override = SubResource("StandardMaterial3D_lquwl")
use_collision = true

[node name="Legs" type="CSGCombiner3D" parent="Office CSG/Table"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, -0.1, 0)

[node name="Leg" type="CSGBox3D" parent="Office CSG/Table/Legs"]
transform = Transform3D(1.62, 0, 0, 0, 2.7, 0, 0, 0, 1.62, -0.433462, 1.88462, -1.20746)
size = Vector3(0.1, 0.4, 0.1)

[node name="Leg2" type="CSGBox3D" parent="Office CSG/Table/Legs"]
transform = Transform3D(1.62, 0, 0, 0, 2.7, 0, 0, 0, 1.62, -0.433462, 1.88462, -0.159769)
size = Vector3(0.1, 0.4, 0.1)

[node name="Leg3" type="CSGBox3D" parent="Office CSG/Table/Legs"]
transform = Transform3D(1.62, 0, 0, 0, 2.7, 0, 0, 0, 1.62, 1.81808, 1.88462, -0.159769)
size = Vector3(0.1, 0.4, 0.1)

[node name="Leg4" type="CSGBox3D" parent="Office CSG/Table/Legs"]
transform = Transform3D(1.62, 0, 0, 0, 2.7, 0, 0, 0, 1.62, 1.81808, 1.88462, -1.20746)
size = Vector3(0.1, 0.4, 0.1)

[node name="Base" type="CSGBox3D" parent="Office CSG/Table"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 2.35, -0.7)
size = Vector3(2.6, 0.1, 1.4)

[node name="Ceiling" type="CSGBox3D" parent="Office CSG"]
transform = Transform3D(1.4014, 0, 0, 0, 1.4014, 0, 0, 0, 1.4014, -0.272003, 6.7474, -0.32)
material_override = SubResource("StandardMaterial3D_7mycd")
use_collision = true
size = Vector3(7.2, 0.5, 7.2)

[node name="Ceiling Light" type="CSGCombiner3D" parent="Office CSG"]

[node name="Light" type="CSGCombiner3D" parent="Office CSG/Ceiling Light"]
transform = Transform3D(-2.37528e-07, 0, 0.429, 0, 0.088, 0, -5.434, 0, -1.87522e-08, 2.1, 6.3, -0.3)

[node name="Base2" type="CSGBox3D" parent="Office CSG/Ceiling Light/Light"]
transform = Transform3D(0.9, 0, 0, 0, 1, 0, 0, 0, 0.7, 0, 1.52588e-05, 0)
material_override = SubResource("StandardMaterial3D_272bh")

[node name="Base" type="CSGBox3D" parent="Office CSG/Ceiling Light/Light"]
transform = Transform3D(1.1, 0, 0, 0, 1, 0, 0, 0, 1.2, 0, 1.13637, 0)
material_override = SubResource("StandardMaterial3D_5vw27")

[node name="OmniLight3D" type="OmniLight3D" parent="Office CSG/Ceiling Light"]
transform = Transform3D(0.984808, 0.150383, 0.0868238, -2.78059e-08, 0.5, -0.866026, -0.173648, 0.852869, 0.492404, -2.38419e-07, 6.1, 0.299999)
omni_range = 15.0

[node name="Light2" type="CSGCombiner3D" parent="Office CSG/Ceiling Light"]
transform = Transform3D(-2.37528e-07, 0, 0.429, 0, 0.088, 0, -5.434, 0, -1.87522e-08, -2.6, 6.3, -0.3)

[node name="Base2" type="CSGBox3D" parent="Office CSG/Ceiling Light/Light2"]
transform = Transform3D(0.9, 0, 0, 0, 1, 0, 0, 0, 0.7, 0, 1.52588e-05, 0)
material_override = SubResource("StandardMaterial3D_272bh")

[node name="Base" type="CSGBox3D" parent="Office CSG/Ceiling Light/Light2"]
transform = Transform3D(1.1, 0, 0, 0, 1, 0, 0, 0, 1.2, 0, 1.13637, 0)
material_override = SubResource("StandardMaterial3D_5vw27")

[node name="ProtoController" parent="." instance=ExtResource("3_360kh")]
transform = Transform3D(0.766044, 0, -0.642788, 0, 1, 0, 0.642788, 0, 0.766044, -3.3, 2.2, 2.9)
can_sprint = true
can_freefly = true
input_left = "move_left"
input_right = "move_right"
input_forward = "move_forward"
input_back = "move_back"
input_jump = "jump"

[node name="Instructions" type="Node" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="Instructions"]
script = ExtResource("4_57x4s")

[node name="to_computer" type="Label" parent="Instructions/CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -155.0
offset_top = 17.0
offset_right = 155.0
offset_bottom = 59.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("5_360kh")
theme_override_font_sizes/font_size = 30
text = "Go to your computer."

[node name="Furniture" type="Node" parent="."]

[node name="Bed" parent="Furniture" instance=ExtResource("7_d8tv4")]
transform = Transform3D(1.9, 0, 0, 0, 1.9, 0, 0, 0, 1.9, -2.5, 1.3, 2.1)

[node name="StaticBody3D" type="StaticBody3D" parent="Furniture/Bed"]
transform = Transform3D(148.239, 0, 0, 0, 57.015, 0, 0, 0, 205.254, 0, 0.263158, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Furniture/Bed/StaticBody3D"]
transform = Transform3D(0.012, 0, 0, 0, 0.006, 0, 0, 0, 0.01, 0, 0, 0)
mesh = SubResource("BoxMesh_1g7a3")
skeleton = NodePath("../..")

[node name="Table" parent="." instance=ExtResource("10_mn0k7")]
transform = Transform3D(-3.0598e-07, 0, -7, 0, 7, 0, 7, 0, -3.0598e-07, 3.5, 1.3, -3)

[connection signal="body_entered" from="Office CSG/Chair/Area3D" to="Office CSG/Chair" method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Office CSG/Chair/Area3D" to="Office CSG/Chair" method="_on_area_3d_body_exited"]
